--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -23,10 +23,16 @@
     	-dice roller?
       -custom character?
 
+    <div class="input-group">
+      <input type="text">
+    </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
     <script src="scripts/betrayalManager.js"></script>
+
   </body>
 </html>
