--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Betrayal at House on the Hill helper</title>
 
+    <link href="css/style.css" rel="stylesheet">
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,15 +19,47 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    features:	
-    	-enter name of player, select character, automatically order who goes first
-    	-dice roller?
-      -custom character?
+    <div class="container">
+      <h1>Hello, world!</h1>
+      features:	
+      	-enter name of player, select character, automatically order who goes first
+      	-dice roller?
+        -custom character?
 
-    <div class="input-group">
-      <input type="text">
-    </div>
+      <div class="input-group">
+        <input id="player_name_input" name="test" type="text" class="form-control" aria="..." placeholder="Enter player's name">
+              <div class="input-group-btn">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Character <span class="caret"></span></button>
+              <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                <li><a class="red_char" href="#">Ox Bellows</a></li>
+                <li><a class="red_char" href="#">Darrin 'Flash' Williams</a></li>
+                <li><a class="white_char" href="#">Father Rhinehardt</a></li>
+                <li><a class="white_char" href="#">Professor Longfellow</a></li>
+                <li><a class="purple_char" href="#">Heather Granviille</a></li>
+                <li><a class="purple_char" href="#">Jenny LeClerc</a></li>
+                <li><a class="green_char" href="#">Peter Akimoto</a></li>
+                <li><a class="green_char" href="#">Brandon Jaspers</a></li>
+                <li><a class="blue_char" href="#">Vivian Lopez</a></li>
+                <li><a class="blue_char" href="#">Madame Zostra</a></li>
+                <li><a class="orange_char" href="#">Zoe Ingstrom</a></li>
+                <li><a class="orange_char" href="#">Missy Dubourde</a></li>
+              </ul>
+            </div>
+      </div>
+    <hr>
+      <div id="char_list">
+        <p>Gonna add stuff here?</p>
+      </div>
+      <script>
+
+      </script>
+
+    <footer>
+      <hr>
+      <p>Daniel Xiao made this! Github link soon</p>
+    </footer>
+
+    </div> <!-- Container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
