--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -9,11 +9,11 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Semantic -->
-    <script src="js/semantic.min.js"></script>
-    <link href="css/semantic.min.css" rel="stylesheet">
+    <script src="js/semantic.min.js" type="text/javascript"></script>
+    <link href="css/semantic.min.css" rel="stylesheet" type="text/css">
     <!-- Custom -->
-    <link href="css/style.css" rel="stylesheet">
-    <script src="scripts/betrayalManager.js"></script>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="js/betrayalManager.js" type="text/javascript"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,6 +56,13 @@
             <div class="item orange_char">Zoe Ingstrom</div>
             <div class="item orange_char">Missy Dubourde</div>
           </div>
+        </div>
+
+        <div class="ui basic button add_player" id="add_player">
+          Add Player
+        </div>
+        <div class="ui custom popup add_player">
+          Oops, enter a name and select a character!
         </div>
       </div>
 
