--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Betrayal at House on the Hill helper</title>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- jQuery  -->
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <!-- Semantic -->
     <script src="js/semantic.min.js" type="text/javascript"></script>
     <link href="css/semantic.min.css" rel="stylesheet" type="text/css">
@@ -73,8 +73,9 @@
       <hr> 
       <!-- display list of players here -->
       <div id="char_list">
-        <p>Gonna add stuff here?</p>
+        <h2>Player - Character - - Speed - Might - Sanity - Knowledge</h2>
       </div>
+
 
     <!-- Footer -->
     <footer>
@@ -85,4 +86,4 @@
     </div> <!-- Container -->
 
   </body>
-</html>
+</html> 
