updated footer description with links

--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -80,7 +80,7 @@
     <!-- Footer -->
     <footer>
       <hr>
-      <p>Daniel Xiao made this! Github link soon</p>
+      <p><a href="http://www.elementten.com">Daniel Xiao</a> made this using <a href="http://semantic-ui.com/">Semantic UI</a>! Source code can be found on <a href="https://github.com/neonwednesdays/BetrayalHelper">GitHub</a>.</p>
     </footer>
 
     </div> <!-- Container -->
