--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -9,6 +9,7 @@
     <!-- jQuery  -->
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <!-- Semantic -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <script src="js/semantic.min.js" type="text/javascript"></script>
     <link href="css/semantic.min.css" rel="stylesheet" type="text/css">
     <!-- Custom -->
@@ -74,6 +75,14 @@
       <!-- display list of players here -->
       <div id="char_list">
         <h2>Player - Character - - Speed - Might - Sanity - Knowledge</h2>
+        <div class="ui fluid card">
+          <div class="content">
+            <a class="header">
+              Test Player Card
+            </a>
+
+          </div>
+        </div>
       </div>
 
 
