--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -9,7 +9,6 @@
     <!-- jQuery  -->
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <!-- Semantic -->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
     <script src="js/semantic.min.js" type="text/javascript"></script>
     <link href="css/semantic.min.css" rel="stylesheet" type="text/css">
     <!-- Custom -->
@@ -65,25 +64,42 @@
         <div class="ui basic submit button add_player" id="add_player">
           Add Player
         </div>
-        <div class="ui custom popup add_player">
-          Oops, enter a name and select a character!
-        </div>
       </form> <!-- Form -->
 
     
       <hr> 
       <!-- display list of players here -->
       <div id="char_list">
-        <h2>Player - Character - - Speed - Might - Sanity - Knowledge</h2>
         <div class="ui fluid card">
           <div class="content">
             <a class="header">
               Test Player Card
             </a>
+            <div class="ui tiny card">
+              <div class="header">
+                Speed
+              </div>
+              <div class="ui horizontal list speed stat holder">
+       <!--          <div class="inactive item speed stat"> 2 </div>
+                <div class="inactive item speed stat">2</div>
+                <div class="inactive item speed stat">2</div> -->
+                <div class="default item speed stat">3</div>
+                <div class="active blue label item speed stat">4</div>
+                <div class="inactive item speed stat">5</div>
+                <div class="inactive item speed stat">5</div>
+                <div class="inactive item speed stat">6</div>
+              </div>
 
+              <div class="2 fluid ui basic buttons">
+                <div class="ui button" id="minus_stat">-</div>
+                <div class="ui button" id="plus_stat">+</div>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
+
 
 
     <!-- Footer -->
