--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -14,6 +14,8 @@
     <!-- Custom -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/betrayalManager.js" type="text/javascript"></script>
+    <script src="js/loadJson.js" type="text/javascript"></script>
+    <script src="js/statManager.js" type="text/javascript"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,14 +82,14 @@
                 Speed
               </div>
               <div class="ui horizontal list speed stat holder">
-       <!--          <div class="inactive item speed stat"> 2 </div>
-                <div class="inactive item speed stat">2</div>
-                <div class="inactive item speed stat">2</div> -->
-                <div class="default item speed stat">3</div>
-                <div class="active blue label item speed stat">4</div>
-                <div class="inactive item speed stat">5</div>
-                <div class="inactive item speed stat">5</div>
-                <div class="inactive item speed stat">6</div>
+                <div class="inactive item speed stat" id="speed 0">2</div>
+                <div class="inactive item speed stat" id="speed 1">2</div>
+                <div class="inactive item speed stat" id="speed 2">2</div>
+                <div class="default item speed stat" id="speed 3">3</div>
+                <div class="active item speed stat" id="speed 4">4</div>
+                <div class="inactive item speed stat" id="speed 5">5</div>
+                <div class="inactive item speed stat" id="speed 6">5</div>
+                <div class="inactive item speed stat"id="speed 7">6</div>
               </div>
 
               <div class="2 fluid ui basic buttons">
