refinagled the updateStats function
there’s also characterStats.js which holds the default stats, not using
json anymore

--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -75,26 +75,27 @@
       <div id="char_list">
 
 
-        <div class="ui fluid card">
-          <div class="content">
-            <a class="header">Test Player Card</a>
-            <div class="ui tiny card">
-              <div class="header">Speed</div>
-              <div class="ui horizontal list speed stat holder">
-                <div class="inactive item speed stat" id="speed empty"></div>
-                <div class="inactive item speed stat" id="speed 0">2</div>
-                <div class="inactive item speed stat" id="speed 1">2</div>
-                <div class="inactive item speed stat" id="speed 2">2</div>
-                <div class="inactive default item speed stat" id="speed 3">3</div>
-                <div class="inactive item speed stat" id="speed 4">4</div>
-                <div class="inactive item speed stat" id="speed 5">5</div>
-                <div class="inactive item speed stat" id="speed 6">5</div>
-                <div class="inactive item speed stat"id="speed 7">6</div>
+        <div class="ui fluid card test">
+          <div class="content test">
+            <a class="header test">Test Card</a>
+            <div class="ui tiny card test">
+              <div class="header test">fake</div>
+              <div class="ui horizontal list stat holder fake test">
+                <div class="inactive item stat fake test" id="fake test empty"></div>
+                <div class="inactive item stat fake test" id="fake test 0">2</div>
+                <div class="inactive item stat fake test" id="fake test 1">2</div>
+                <div class="inactive item stat fake test" id="fake test 2">2</div>
+                <div class="inactive default item stat fake test" id="fake test 3">3</div>
+                <div class="inactive item stat fake test" id="fake test 4">4</div>
+                <div class="inactive item stat fake test" id="fake test 5">5</div>
+                <div class="inactive item stat fake test" id="fake test 6">5</div>
+                <div class="inactive item stat fake test"id="fake test 7">6</div>
+                <div class="inactive item stat fake test" id="fake test empty"></div>
               </div>
 
               <div class="2 fluid ui basic buttons">
-                <div class="ui button" id="minus_stat">-</div>
-                <div class="ui button" id="plus_stat">+</div>
+                <div class="ui button" id="minus_stat_test">-</div>
+                <div class="ui button" id="plus_stat_test">+</div>
               </div>
             </div>
           </div>
