generate any character
bugs: generating multiple of the same one, ideally remove character
from list

--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -49,7 +49,7 @@
                 <div class="item white_char">Father Rhinehardt</div>
                 <div class="item white_char">Professor Longfellow</div>
 
-                <div class="item purple_char">Heather Granviille</div>
+                <div class="item purple_char">Heather Granville</div>
                 <div class="item purple_char">Jenny LeClerc</div>
 
                 <div class="item green_char">Peter Akimoto</div>
@@ -69,17 +69,15 @@
         </div>
       </form> <!-- Form -->
 
-    
-      <hr> 
       <!-- display list of players here -->
-      <div id="char_list">
+      <div id="char_list"> </div>
 
-
-        <div class="ui fluid card test">
-          <div class="content test">
-            <a class="header test">Test Card</a>
+<!--       <div class="ui accordion fluid card test">
+        <div class="ui four cards content test">
+          <a class="active title header test">Test Card</a>
+          <div class="active content"> 
             <div class="ui tiny card test">
-              <div class="header test">fake</div>
+              <div class="header test">fake stat 1</div>
               <div class="ui horizontal list stat holder fake test">
                 <div class="inactive item stat fake test" id="fake test empty"></div>
                 <div class="inactive item stat fake test" id="fake test 0">2</div>
@@ -100,10 +98,8 @@
             </div>
           </div>
         </div>
-
       </div>
-
-
+ -->
 
     <!-- Footer -->
     <footer>
