you can now close active boxes, returns character choices

--- a/BetrayalHelper.html
+++ b/BetrayalHelper.html
@@ -72,7 +72,8 @@
       <!-- display list of players here -->
       <div id="char_list"> </div>
 
-<!--       <div class="ui accordion fluid card test">
+      <div class="ui accordion fluid card main test">
+        <div class="test close">&times;</div>
         <div class="ui four cards content test">
           <a class="active title header test">Test Card</a>
           <div class="active content"> 
@@ -99,7 +100,7 @@
           </div>
         </div>
       </div>
- -->
+
 
     <!-- Footer -->
     <footer>
